fixed broken overflow on about page

--- a/css/index.css
+++ b/css/index.css
@@ -197,6 +197,11 @@ strong {
   height: auto;
   overflow: hidden;
 }
+.about-container {
+  margin: 0 auto;
+  max-width: 100%;
+  width: 100%;
+}
 nav {
   display: flex;
   justify-content: flex-end;
