--- a/less/general-styles.less
+++ b/less/general-styles.less
@@ -39,3 +39,9 @@ strong {
     //         }
     //     }
     }
+
+.about-container {
+    margin: 0 auto;
+    max-width: 100%;
+    width: 100%;
+}
